--- a/app/src/main/res/drawable/gradient_button.xml
+++ b/app/src/main/res/drawable/gradient_button.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="@color/orange_light"
-
-    android:endColor="@color/orange_300"
-    android:type="linear"
-    android:angle="270"/>
-    <corners android:radius="50dp"/>
+    <gradient
+        android:angle="270"
+        android:endColor="@color/orange_300"
+        android:startColor="@color/orange_light"
+        android:type="linear" />
+    <corners android:radius="50dp" />
 
 </shape>
 
