--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,7 +6,7 @@
     <fragment
         android:id="@+id/titleFragment"
         android:name="com.ignation.cartoonshards.gameFragments.TitleFragment"
-        android:label="TitleFragment" >
+        android:label="@string/app_name">
         <action
             android:id="@+id/action_titleFragment_to_gameFragment"
             app:destination="@id/gameFragment"
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/gameFragment"
         android:name="com.ignation.cartoonshards.gameFragments.GameFragment"
-        android:label="GameFragment" >
+        android:label="@string/app_name">
         <action
             android:id="@+id/action_gameFragment_to_finishFragment"
             app:destination="@id/finishFragment"
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/finishFragment"
         android:name="com.ignation.cartoonshards.gameFragments.FinishFragment"
-        android:label="FinishFragment" >
+        android:label="@string/app_name">
         <argument
             android:name="score"
             app:argType="integer" />
